5.9.1
-----
1. Fix genre images.

5.9.0
-----
 1. Read half-star setting from ratings light, and use to control if can set
    half stars.
 2. Fix setting of half-stars in ratings dialog.
 3. Fix mapping of icons in apps.
 4. When splitting release lists into groups, only group releases with
    'compilation=1' into 'Compilations' if they have no explicit release type.
 5. Don't allow 'Compilations' entry to be pinned, as this has 'artist_id:'
    parameter that can change.
 6. If a 'My Music' item view has 'library_id' then don't ask whether to pin
    with ID or not - as will always use its ID.
 7. Improve album style queue with grouping - thanks to Darrell.
 8. Allow per-player colour setting.
 9. Add support for LMS9's portraitid attribute - thanks to Michael Herger.
10. If no playlist image found, use first valid image found in playlist tracks.
11. Add (server side) option to enable playlist images.
12. When prompting for discs to add to queue use '0' as keyboard shortcut for
    'All discs', and '1' .. '9' for discs themselves.
13. Fix padding in 'Manage players' dialog.
14. If JSONRPC calls fail and no player is attached then show a warning
    message indicating this.

5.8.3
-----
1. Don't react to slider, etc., changes in group volume dialog for fixed volume
   players when Material is set to 'Hide volume control'.
2. Fix closing of transfer queue and sort list dialogs when clicking on select
   option.

5.8.2
-----
 1. Translation updates.
 2. Add context-menu to player name in main toolbar.
 3. Use 150px (or 300px HiDPI) for list images.
 4. Reduce CPU load by removing some CSS animations - don't pulse library
    refresh status, don't pulse playing but muted volume, and use outlined pause
    icon to indicate waiting to play.
 5. Fix custom actions for playlists.
 6. Add PLAYLISTID and PLAYLISTNAME to custom action variables.
 7. Remove fix for mapping of mysqueezebox.com icons, as no longer required and
    breaks some favourites images.