@@ -1,6 +1,7 @@
 5.9.1
 -----
 1. Fix genre images.
+2. Add ellipsis to album-style queue sub-titles.
 
 5.9.0
 -----
